--- a/view/expense.html
+++ b/view/expense.html
@@ -42,8 +42,7 @@
 
 
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
-        <script src="../public/expense.js" ></script>
-    
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="/js/expense.js"></script>
 </body>
 </html>
