--- a/view/login.html
+++ b/view/login.html
@@ -19,8 +19,8 @@
 
     <div id="loginerror"></div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
-    <script src="../public/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/login.js"></script>
     
 </body>
 </html>
