--- a/view/password.html
+++ b/view/password.html
@@ -12,8 +12,8 @@
     </form>
     <div id="message"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
-    <script src="../public/password.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/password.js"></script>
     
     
 </body>
