--- a/view/signup.html
+++ b/view/signup.html
@@ -18,8 +18,8 @@
     <div id="signuperror"></div>
 
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
-    <script src="../public/signup.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/signup.js"></script>
     
 </body>
 </html>
